feat: use supabase for data

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
-{{page-title "SeangoreshtBlog"}}
+{{page-title "Sean Goresht"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage/>
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<main>
+	{{outlet}}
+</main>
