feat: add main nav component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,15 @@
 {{page-title "Sean Goresht"}}
 
+<header role="banner" aria-label="Banner, site information">
+	<Navigation>
+		<ul class="nav-items secondary-navigation" aria-label="contact links">
+			<li class="nav-item">
+				<a href="mailto:seangores@gmail.com" class="nav-item-link">E-mail ✉</a>
+			</li>
+		</ul>
+	</Navigation>
+</header>
+
 <main>
 	{{outlet}}
 </main>
