--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{page-title "Sean Goresht"}}
 
-<header aria-label="Banner, site information">
+<header class="banner" aria-label="Banner, site information">
 	<Navigation>
 		<ul class="nav-items secondary-navigation" aria-label="contact links">
 			<li class="nav-item">
