--- a/app/styles/components/navigation.css
+++ b/app/styles/components/navigation.css
@@ -1,6 +1,6 @@
 .navigation {
 	--navigation-item-gap: 1em;
-	--navigation-item-padding: 0.25em 0.5em;
+	--navigation-item-padding: 0.5em;
 }
 
 @media screen and (min-width: 52.5em) {
