--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 {{page-title "Home"}}
 
-<OverlayedImage @image="sean-wild-hair.jpg" @alt="Sean Goresht, eyeing camera conspicously with wavvy hair" as |section|>
+<OverlayedImage @image="sean-wild-hair.jpg" @offset={{"-30%"}} @alt="Sean Goresht, eyeing camera conspicously with wavvy hair" as |section|>
 	<section.title>Sean Goresht</section.title>
 	<section.description>Front-end web developer, coder, musician, creative</section.description>
 	<ul class="social-media-links">
