--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -55,3 +55,13 @@ h3 {
 	text-align: center;
 	padding: 1em;
 }
+
+* + .social-links {
+	margin-top: 1.8em;
+}
+
+.social-links {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2em;
+}
