--- a/app/components/page-section.hbs
+++ b/app/components/page-section.hbs
@@ -1,3 +1,3 @@
-<section class="page-section">
+<section class="page-section" ...attributes>
 	{{yield (hash title=(component "page-section/title"))}}
 </section>
