--- a/app/templates/photography.hbs
+++ b/app/templates/photography.hbs
@@ -1,7 +1,7 @@
 {{page-title "Photography"}}
 
-<PageSection as |section|>
-	<section.title>Photography</section.title>
+<PageSection class="full" as |section|>
+	<section.title class="centred">Photography</section.title>
 	<Gallery @photos={{this.photos}}>
 		{{outlet}}
 	</Gallery>
