refactor: minor content updates

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -37,7 +37,7 @@
 			<strong><a href="https://emberjs.com/" target="_blank" rel="noopener noreferrer">EmberJS</a></strong>: early adopter since sproutCore days; open-source contributor. 8 years' experience
 		</li>
 	</ul>
-	<LinkTo @route="resume">View my detailed work history</LinkTo>
+	<p><LinkTo @route="resume">View my detailed work history</LinkTo></p>
 </PageSection>
 
 <PageSection id="other-specialties" as |section|>
@@ -93,15 +93,15 @@
 
 		<p>Whenever I travel, I try to capture as many of those breathtaking moments as I can. Sometimes, it isn't easy, but I do my best. My process for post-production generally involves correcting the lens profile and the obvious sharpening, detail, and contrast adjustments.</p>
 
-		<p>I own the <a href="https://google.ca/search?q=sony+a6000" target="_blank" rel="nofollow noopener noreferrer">sony a600 mirrorless camera</a>, and I have picked up many versatile lenses over the years, leading to a wealthy library of photos.</p>
-		<LinkTo @route="photography">Check out my photos 📷</LinkTo>
+		<p>I own the <a href="https://google.ca/search?q=sony+a7r2" target="_blank" rel="nofollow noopener noreferrer">sony a7r2 mirrorless, <em>full-frame</em> camera</a>, and I have picked up many versatile lenses over the years, leading to a wealthy library of photos.</p>
+		<p><LinkTo @route="photography">Check out my photos 📷</LinkTo></p>
 	</PageSection>
 
 	<PageSection id="music" as |nestedSection|>
 		<nestedSection.title>Music</nestedSection.title>
 		<iframe scrolling="no" title="Sean Goresht's Music" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/6011994&amp;color=%23171c19&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true" width="100%" height="450" frameborder="no"></iframe>
 		<p>I started playing keyboard at the age of 13, and have since gone on to make some breathtaking musical scores. I do not play in any bands, but I try to get out and participate in open mics.</p>
-		<a href="https://soundcloud.com/sean-goresht" target="_blank" rel="noopener noreferrer">Listen to my tracks online on soundcloud</a>
+		<p><a href="https://soundcloud.com/sean-goresht" target="_blank" rel="noopener noreferrer">Listen to my tracks online on soundcloud</a></p>
 	</PageSection>
 
 	<PageSection id="scuba-diving" as |nestedSection|>
