fix: wrong social links

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -29,10 +29,11 @@
 		<li class="specialty">
 			<strong title="Useful for client-side diffing and apps that require frequently-updating data"><a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer">ReactJS</a></strong>: worked with gatsby, react-starter, and current instructor/mentor at <a href="https://lighthouselabs.ca/" target="_blank" rel="noopener noreferrer">LightHouse Labs</a></li>
 		<li class="specialty">
-			<strong><a href="http://web.archive.org/web/20201108175156/https://vuejs.org/">VueJS</a></strong>: written, contributed, and worked in <a href="/https://www.npmjs.com/package/vue-cli-plugin-cordova" target="_blank" rel="noopener noreferrer">vue-cordorva</a> packages; met and spoke with Evan You, creator in late 2017 at <a href="https://dotcss.io/">DotCSS</a>
+			<strong><a href="http://https://vuejs.org/">VueJS</a></strong>: written, contributed, and worked in <a href="/https://www.npmjs.com/package/vue-cli-plugin-cordova" target="_blank" rel="noopener noreferrer">vue-cordorva</a> packages; met and spoke with Evan You, creator in late 2017 at <a href="https://dotcss.io/">DotCSS</a>
 		</li>
 		<li class="specialty">
-			<strong><a href="http://web.archive.org/web/20201108175156/https://angularjs.org/" target="_blank" rel="noopener noreferrer">AngularJS</a></strong>: 4 years' experience; worked in enterprise companies developing financial recordkeeping apps along with <LinkTo @route="resume">identity management software</LinkTo></li>
+			<strong><a href="http://https://angularjs.org/" target="_blank" rel="noopener noreferrer">AngularJS</a></strong>: 4 years' experience; worked in enterprise companies developing financial recordkeeping apps along with <LinkTo @route="resume">identity management software</LinkTo>
+		</li>
 		<li class="specialty">
 			<strong><a href="https://emberjs.com/" target="_blank" rel="noopener noreferrer">EmberJS</a></strong>: early adopter since sproutCore days; open-source contributor. 8 years' experience
 		</li>
