chore: undoable routes for now

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -24,7 +24,7 @@
 
 <PageSection id="specialties" as |section|>
 	<section.title>Specialties</section.title>
-	<p>Creating rich <em>Javascript</em> applications has been a passion of mine since the early 2000s. From <LinkTo @route="resume">teaching at various institutions</LinkTo>, I have a strong understanding of the way <abbr title="Single Page Applications">SPA</abbr> frameworks work:</p>
+	<p>Creating rich <em>Javascript</em> applications has been a passion of mine since the early 2000s. From <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer">teaching at various institutions</a>, I have a strong understanding of the way <abbr title="Single Page Applications">SPA</abbr> frameworks work:</p>
 	<ul class="specialties">
 		<li class="specialty">
 			<strong title="Useful for client-side diffing and apps that require frequently-updating data"><a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer">ReactJS</a></strong>: worked with gatsby, react-starter, and current instructor/mentor at <a href="https://lighthouselabs.ca/" target="_blank" rel="noopener noreferrer">LightHouse Labs</a></li>
@@ -32,13 +32,18 @@
 			<strong><a href="http://https://vuejs.org/">VueJS</a></strong>: written, contributed, and worked in <a href="/https://www.npmjs.com/package/vue-cli-plugin-cordova" target="_blank" rel="noopener noreferrer">vue-cordorva</a> packages; met and spoke with Evan You, creator in late 2017 at <a href="https://dotcss.io/">DotCSS</a>
 		</li>
 		<li class="specialty">
-			<strong><a href="http://https://angularjs.org/" target="_blank" rel="noopener noreferrer">AngularJS</a></strong>: 4 years' experience; worked in enterprise companies developing financial recordkeeping apps along with <LinkTo @route="resume">identity management software</LinkTo>
+			<strong><a href="http://https://angularjs.org/" target="_blank" rel="noopener noreferrer">AngularJS</a></strong>: 4 years' experience; worked in enterprise companies developing financial recordkeeping apps along with <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer">identity management software</a>
 		</li>
 		<li class="specialty">
 			<strong><a href="https://emberjs.com/" target="_blank" rel="noopener noreferrer">EmberJS</a></strong>: early adopter since sproutCore days; open-source contributor. 8 years' experience
 		</li>
 	</ul>
-	<p><LinkTo @route="resume">View my detailed work history</LinkTo></p>
+	<p><a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer">
+		View my detailed work history <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+			<title>linkedin icon</title>
+			<path fill="#0077b5" d="M27.263 27.269h-4.739v-7.425c0-1.771-0.036-4.049-2.469-4.049-2.471 0-2.848 1.927-2.848 3.919v7.556h-4.739v-15.269h4.552v2.081h0.061c0.636-1.2 2.183-2.467 4.493-2.467 4.801 0 5.689 3.16 5.689 7.273v8.381zM7.116 9.911c-1.525 0-2.751-1.235-2.751-2.753 0-1.517 1.227-2.751 2.751-2.751 1.52 0 2.752 1.233 2.752 2.751 0 1.519-1.233 2.753-2.752 2.753zM9.492 27.269h-4.752v-15.269h4.752v15.269zM29.633 0h-27.272c-1.305 0-2.361 1.032-2.361 2.305v27.389c0 1.275 1.056 2.305 2.361 2.305h27.268c1.304 0 2.371-1.031 2.371-2.305v-27.389c0-1.273-1.067-2.305-2.371-2.305h0.004z"></path>
+		</svg>
+	</a></p>
 </PageSection>
 
 <PageSection id="other-specialties" as |section|>
@@ -56,7 +61,6 @@
 			</small>
 		</p>
 	</aside>
-	<p><LinkTo @route="projects">View my work samples</LinkTo></p>
 </PageSection>
 
 <PageSection id="other-resumes" as |pageSection|>
