--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -16,8 +16,9 @@
 			<blockquote class="tagline">
 				<q>Hey, I'm <strong>Sean</strong>: a <strong>front-end web developer</strong> from <em>Calgary, Alberta, Canada 🍁</em></q>
 			</blockquote>
-			<p class="bio-line">Currently, I work as a <em>Senior Front-end Software Engineer</em> at <a href="https://synopsys.com" target="_blank" rel="noopener noreferrer">Synopsys Inc.</a>, where I write <a href="https://emberjs.com" target="_blank" rel="noopener noreferrer">EmberJS enterprise software</a></p>
-			<p class="bio-line">I've also extensively <a href="https://seangoes.world" target="_blank" rel="noopener noreferrer">travelled the world</a> and have <a href="https://anchor.fm/sean-g7/" target="_blank" rel="noopener noreferrer">my own podcast on front-end web development</a>.</p>
+			<p class="bio-line" contenteditable="">I'm a creative, coder💻, musician 🎹, <a href="https://anchor.fm/sean-g7/" target="_blank" rel="noopener noreferrer">podcaster 🎙️</a>, <LinkTo @route="photography">photographer 📸</LinkTo>, plant-based foodie 🧑‍🍳, and <a href="https://seangoes.world" target="_blank" rel="noopener noreferrer">world traveller ✈️</a>.</p>
+			<p class="bio-line">I've been doing front-end web development for <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer"><strong>over 12 years now</strong></a>, three of which I spent working as <em>Senior Front-End Developer</em> at <a href="https://synopsys.com">Synopsys.</a>.  I currently run my own software consulting business, where I write enterprise software, and I'm also building out my YouTube cooking channel.</p>
+			<p class="bio-line">You may have also caught me photographing private events, such as the recent <a href="https://yychacks.ca" target="_blank" rel="noopener noreferrer">YYC Hacks Calgary Hackathon</a>, where I not only coached but did the event photography 📷.</p>
 		</grid.column>
 	</Grid>
 </PageSection>
