--- a/app/templates/photography.hbs
+++ b/app/templates/photography.hbs
@@ -5,4 +5,9 @@
 	<Gallery @photos={{this.photos}}>
 		{{outlet}}
 	</Gallery>
+	<section.title>Event Photos</section.title>
+	<p>I have done photography for events such as hackathons, such as <a href="https://yychacks.ca" target="_blank" rel="noopener noreferrer">YYCHacks</a>.</p>
+	<Gallery @photos={{this.hackathonPhotos}}>
+		{{outlet}}
+	</Gallery>
 </PageSection>
