--- a/app/components/gallery/photo.hbs
+++ b/app/components/gallery/photo.hbs
@@ -1,3 +1,3 @@
 {{yield}}
 
-<ResponsiveImage @src={{this.imagePath}} alt={{this.altText}}/>
+<ResponsiveImage @src={{get-image-path @photo.path}} alt={{this.altText}} ...attributes/>
