chore: update hero photo

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 {{page-title "Home"}}
 
-<OverlayedImage @image="sean-sitting-by-outdoor-education-centre.jpg" @alt="Sean Goresht, perched on a rock, looking upwards to the sky in an open field" as |section|>
+<OverlayedImage @image="sean-stephen-aveneue-wide-leaning-in.jpg" @alt="Sean Goresht, perched on a rock, looking upwards to the sky in an open field" as |section|>
 	<section.title>Sean Goresht</section.title>
 	<section.description>Front-end web developer, coder, musician, creative</section.description>
 	<SocialLinks/>
@@ -17,7 +17,7 @@
 				<q>Hey, I'm <strong>Sean</strong>: a <strong>front-end web developer</strong> from <em>Calgary, Alberta, Canada 🍁</em></q>
 			</blockquote>
 			<p class="bio-line">I'm a creative, coder💻, musician 🎹, <a href="https://anchor.fm/sean-g7/" target="_blank" rel="noopener noreferrer">podcaster 🎙️</a>, <LinkTo @route="photography">photographer 📸</LinkTo>, plant-based foodie 🧑‍🍳, and <a href="https://seangoes.world" target="_blank" rel="noopener noreferrer">world traveller ✈️</a>.</p>
-			<p class="bio-line">I've been doing front-end web development for <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer"><strong>over 12 years now</strong></a>, three of which I spent working as <em>Senior Front-End Developer</em> at <a href="https://synopsys.com">Synopsys.</a>.  I currently run my own software consulting business, where I write enterprise software, and I'm also building out my YouTube cooking channel.</p>
+			<p class="bio-line">I've been doing front-end web development for <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer"><strong>over 14 years now</strong></a>, three of which I spent working as <em>Senior Front-End Developer</em> at <a href="https://synopsys.com">Synopsys.</a>.  <LinkTo @route="resume">View my resume.</LinkTo></p>
 			<iframe src="https://podcasters.spotify.com/pod/show/sean-g7/embed" height="102px" width="100%" title="Web Perspectives Podcast"></iframe>
 			<p class="bio-line">You may have also caught me photographing private events, such as the recent <a href="https://yychacks.ca" target="_blank" rel="noopener noreferrer">YYC Hacks Calgary Hackathon</a>, where I not only coached but did the event photography 📷.</p>
 		</grid.column>
@@ -40,6 +40,7 @@
 			<strong><a href="https://emberjs.com/" target="_blank" rel="noopener noreferrer">EmberJS</a></strong>: early adopter since sproutCore days; open-source contributor. 8 years' experience
 		</li>
 	</ul>
+	<p>I've also become quite <strong>well-versed</strong> in <a href="https://astro.build" rel="noopener noreferrer">Astro</a> this year.  <LinkTo @route="projects">View my portfolio to see my open-source work</LinkTo>.</p>
 	<p><a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer">
 		View my detailed work history <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
 			<title>linkedin icon</title>
