chore: remove resume route for now

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -17,7 +17,7 @@
 				<q>Hey, I'm <strong>Sean</strong>: a <strong>front-end web developer</strong> from <em>Calgary, Alberta, Canada 🍁</em></q>
 			</blockquote>
 			<p class="bio-line">I'm a creative, coder💻, musician 🎹, <a href="https://anchor.fm/sean-g7/" target="_blank" rel="noopener noreferrer">podcaster 🎙️</a>, <LinkTo @route="photography">photographer 📸</LinkTo>, plant-based foodie 🧑‍🍳, and <a href="https://seangoes.world" target="_blank" rel="noopener noreferrer">world traveller ✈️</a>.</p>
-			<p class="bio-line">I've been doing front-end web development for <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer"><strong>over 14 years now</strong></a>, three of which I spent working as <em>Senior Front-End Developer</em> at <a href="https://synopsys.com">Synopsys.</a>.  <LinkTo @route="resume">View my resume.</LinkTo></p>
+			<p class="bio-line">I've been doing front-end web development for <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer"><strong>over 14 years now</strong></a>, three of which I spent working as <em>Senior Front-End Developer</em> at <a href="https://synopsys.com">Synopsys.</a>.  <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878">View my resume on LinkedIn.</a></p>
 			<iframe src="https://podcasters.spotify.com/pod/show/sean-g7/embed" height="102px" width="100%" title="Web Perspectives Podcast"></iframe>
 			<p class="bio-line">You may have also caught me photographing private events, such as the recent <a href="https://yychacks.ca" target="_blank" rel="noopener noreferrer">YYC Hacks Calgary Hackathon</a>, where I not only coached but did the event photography 📷.</p>
 		</grid.column>
