--- a/app/styles/components/resume.css
+++ b/app/styles/components/resume.css
@@ -19,6 +19,10 @@
 	inset: 0;
 }
 
+.candidate-summary {
+	flex-shrink: 0;
+}
+
 .resume {
 	--resume-padding: clamp(3rem, calc(1.5rem + 5vmin), 1.5rem);
 	--resume-background: transparent;
@@ -30,7 +34,6 @@
 @media screen and (min-width: 50em) {
 	.resume {
 		display: flex;
-		flex-wrap: wrap;
 		gap: 1.5rem;
 	}
 	.candidate-information {
@@ -40,6 +43,12 @@
 
 .resume-headline {
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+}
+
+.candidate-meta {
+	order: -1;
 }
 
 .name {
@@ -77,3 +86,37 @@
 .social-media .social-links {
 	justify-content: space-between;
 }
+
+.resume-details-section-title {
+	margin-block-end: 2rem;
+	font-weight: bold;
+}
+
+.resume-details {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.engagements-container {
+	flex: 0.5;
+}
+
+.resume-details section {
+	padding: 3rem 4rem;
+}
+
+.work-history-container {
+	flex: 1;
+	margin-inline: clamp(1rem, 4rem, calc(1vw + 0.5rem));
+}
+
+.nationality {
+	display: inline-block;
+}
+
+.candidate-nationalities {
+	display: flex;
+	gap: 1rem;
+	justify-content: flex-end;
+}
+
