--- a/app/components/resume/resume.hbs
+++ b/app/components/resume/resume.hbs
@@ -24,7 +24,7 @@
 				<ResponsiveImage class="profile-image" @width={{450}} @src={{get-image-path "sean-suit-square.jpg"}} alt="Sean Goresht"/>
 			</header>
 			<section id="experience">
-				<h2>Experience</h2>
+				<h2 class="candidate-experience-heading">Experience</h2>
 				<dl class="experience-meta">
 					{{#each this.skillsWithExperience as |skill|}}
 						<div class="experience">
