--- a/app/styles/components/project.css
+++ b/app/styles/components/project.css
@@ -1,3 +1,11 @@
+.project {
+	margin-block-end: 2.5rem;
+}
+
+.project-title {
+	margin-block-end: 1.5rem;
+}
+
 .project-image {
 	margin: 2rem 0;
 }
@@ -30,4 +38,38 @@
 	width: 100%;
 	height: 100%;
 	transition: inherit;
+}
+
+@media screen and (min-width: 60rem) {
+	.project-meta {
+		display: grid;
+		grid-template-columns: min-content 1fr;
+		gap: 2rem;
+	}
+	.project-meta dt::after {
+		content: ":";
+	}
+	.resume .project {
+		display: grid;
+		gap: 1rem;
+		align-items: center;
+		grid-template-columns: minmax(30rem, 50rem) 1fr;
+		grid-template-areas: "media" "description";
+	}
+}
+
+.project-meta dt {
+	font-weight: bold;
+}
+
+.project-meta {
+	margin-block: 1rem;
+}
+
+.project-features {
+	list-style: disc;
+}
+
+.project-description {
+	font-size: 0.9em;
 }
